Perfect: compilation, not functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -473,10 +473,20 @@
 
 </div>
 
+<hr>
+<nav>
+  <div>
+    <a [routerLink]="['/']">dog-walker-logo.svg</a>
+    <h1 class="title">OpenFemaNgClient</h1>
+  </div>
+</nav>
+vvv routeroutlet
+<router-outlet></router-outlet>
+^^^ routeroutlet
 
-
+<hr>
 app-data-set-viewer NEXT
-<!-- app-data-set-viewer>app-data-set-viewer goes here!</app-data-set-viewer -->
+<!--app-data-set-viewer -->app-data-set-viewer goes here!<!--/app-data-set-viewer -->
 app-data-set-viewer ABOVE
 
 
@@ -489,4 +499,3 @@ app-data-set-viewer ABOVE
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<router-outlet></router-outlet>
