--- a/src/app/Components/data-set-viewer/data-set-viewer.component.html
+++ b/src/app/Components/data-set-viewer/data-set-viewer.component.html
@@ -3,7 +3,7 @@
 <h3>Disaster Declarations Summary</h3>
 
 <ul>
-  <li *ngFor="let disaster of disasters$ | async">
-    {{disaster.femaDeclarationString}}: {{disaster.disasterNumber}};  {{disaster.state}};  {{disaster.declarationType}};  {{disaster.declarationDate}};
-  </li>
+  <!-- li *ngFor="let disaster of disasterDeclarationsSummaries$ | async">
+    {{disaster.DisasterDeclarationsSummaries.disas}}: {{disaster.disasterNumber}};  {{disaster.state}};  {{disaster.declarationType}};  {{disaster.declarationDate}};
+  </li -->
 </ul>
