--- a/src/app/Components/dataset-card/dataset-card.component.html
+++ b/src/app/Components/dataset-card/dataset-card.component.html
@@ -1,4 +1,4 @@
-<p>data-set-card works!</p>
+<p>dataset-card works!</p>
 <article class="dataset-card">
   <h3 class="dataset-heading"><span class="dataset-name"></span>{{disaster.femaDeclarationString}}: {{disaster.declarationTitle}} -- {{disaster.disasterNumber}}</h3>
   <p class="dataset-subhead">State:  {{disaster.state}}; Type: {{disaster.declarationType}}</p>
