--- a/src/app/app.component.orig.html
+++ b/src/app/app.component.orig.html
@@ -485,9 +485,9 @@ vvv routeroutlet
 ^^^ routeroutlet
 
 <hr>
-app-data-set-viewer NEXT
-<!--app-data-set-viewer -->app-data-set-viewer goes here!<!--/app-data-set-viewer -->
-app-data-set-viewer ABOVE
+app-dataset-viewer NEXT
+<!--app-dataset-viewer -->app-dataset-viewer goes here!<!--/app-dataset-viewer -->
+app-dataset-viewer ABOVE
 
 
 
