--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,6 @@ vvv routeroutlet<br>
 ^^^ routeroutlet
 
 <!--hr>
-app-data-set-viewer NEXT
-<!--app-data-set-viewer -- >app-data-set-viewer goes here!<!--/app-data-set-viewer -- >
-app-data-set-viewer ABOVE -->
+app-dataset-viewer NEXT
+<!--app-dataset-viewer -- >app-dataset-viewer goes here!<!--/app-dataset-viewer -- >
+app-dataset-viewer ABOVE -->
