Add in details view

--- a/src/app/Components/dataset-details/dataset-details.component.html
+++ b/src/app/Components/dataset-details/dataset-details.component.html
@@ -1,1 +1,10 @@
-<p>dataset-details.component works!</p>
+
+<article class="details-panel" *ngIf="(summary$ | async) as summary">
+  <!--img class="main-img" src="{{summary.photoUrl}}" alt="Photo of {{summary.name}}"-->
+  <article>
+    <h1 class="main-text">Hi, I'm {{summary.disasterNumber}} -- {{summary.declarationTitle}}</h1>
+    <h2>My request # is <span class="emphasize">{{summary.declarationRequestNumber}} of type {{summary.declarationType}}</span></h2>
+    <p>{{summary.incidentBeginDate}} to {{summary.incidentEndDate}}</p>
+    <p>I live in <span class="emphasize">{{summary.state}} at zip {{summary.fipsCountyCode}}</span></p>
+  </article>
+</article>
