--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav>
   <div>
-    <a [routerLink]="['/']"><img class="logo" src="assets/wind.ico" title="OpenFemaNgClient"></a>
-    <h1 class="title">OpenFemaNgClient</h1>
+    <a [routerLink]="['/']"><img class="logo" src="assets/wind.ico" title="OpenFemaNgClient" height="40px" width="40px" ></a>
+    <h1 class="title">{{title}}</h1>
   </div>
 </nav>
 vvv routeroutlet<br>
