--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,3 +2,21 @@
   height:"48px";
   width:"48px";
 }
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 10px 10px 10px;
+}
+
+nav div.menu-items {
+  display: flex;
+  width: 10%;
+  justify-content: space-between;
+}
+nav > div {
+  display: flex;
+}
+.title {
+  font-size: 25pt;
+}
