Move lots of images

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,11 @@
 <nav>
   <div>
-    <a [routerLink]="['/']"><img class="logo" src="assets/wind.ico" title="OpenFemaNgClient" height="40px" width="40px" ></a>
+    <a [routerLink]="['/']"><img class="logo" src="assets/wind.ico" title="OpenFemaNgClient" height="40px" width="40px" > &nbsp;</a>
     <h1 class="title">{{title}}</h1>
   </div>
 </nav>
-vvv routeroutlet<br>
+
 <router-outlet></router-outlet>
-^^^ routeroutlet
 
 <!--hr>
 app-dataset-viewer NEXT
