--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <nav>
   <div>
-    <a [routerLink]="['/']"><img class="logo" src="assets/wind.ico" title="OpenFemaNgClient" height="40px" width="40px" > &nbsp;</a>
+    <a [routerLink]="['/']"><img class="logo" src="assets/wind.ico" title="OpenFemaNgClient" height="40px" width="40px"></a>
+    &nbsp;
     <h1 class="title">{{title}}</h1>
   </div>
 </nav>
