STart to add Ag-Grid & footer components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 </nav>
 
 <router-outlet></router-outlet>
-
+<app-footer></app-footer>
 <!--hr>
 app-dataset-viewer NEXT
 <!--app-dataset-viewer -- >app-dataset-viewer goes here!<!--/app-dataset-viewer -- >
