Sort of works. Much disabled...

--- a/src/app/Components/dataset-viewer/dataset-viewer.component.html
+++ b/src/app/Components/dataset-viewer/dataset-viewer.component.html
@@ -8,7 +8,8 @@
     <br>
     <hr>
     <br>
-    <app-dataset-card [disaster]=disaster [index]=i></app-dataset-card>
+    <!-- app-dataset-card [disaster]=disaster [index]=i></app-dataset-card -->
+    dataset card here...
     <br>
 
   </li>
