--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,10 @@
 </nav>
 
 <router-outlet></router-outlet>
-<app-footer></app-footer>
-<!--hr>
+
 app-dataset-viewer NEXT
-<!--app-dataset-viewer -- >app-dataset-viewer goes here!<!--/app-dataset-viewer -- >
+<!-- app-dataset-viewer -- > app-dataset-viewer goes here!<! -- /app-dataset-viewer -- >
 app-dataset-viewer ABOVE -->
+<hr>
+app-footer here...
+<!-- app-footer></app-footer -->
