--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <!-- https://nikitahl.com/horizontal-rule-css -->
 <hr>
-<div>openFemaNgClient ֍ Version {{version}}
-  <a href="http://eoc.online" target="_blank" class="copyLeft">©{{today | date: 'y'}} http://eoc.online - Open Source
-    Tools for EOCs</a>
+<div>openFemaNgClient ֍ Version version<br>
+  <!-- a href="https://eoc.online" target="_blank" class="copyLeft">  https://eoc.online - Open Source
+    Tools for EOCs</a--> evilness resides within?!
 </div>
