--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -1,6 +1,11 @@
 <!-- https://nikitahl.com/horizontal-rule-css -->
+<footer class="footer">
 <hr>
-<div>openFemaNgClient ֍ Version version<br>
-  <!-- a href="https://eoc.online" target="_blank" class="copyLeft">  https://eoc.online - Open Source
-    Tools for EOCs</a--> evilness resides within?!
-</div>
+<div>openFemaNgClient ֍ Version {{version}}</div>
+<br>
+<div>eoc.online™ provides open-source tools for Emergency Operations Centers and local CERT/VOAD/Citizen Corps groups. For more information check out <a href="https://eoc.online" target="_blank">https://eoc.online  - Open Source Tools for EOCs</a>.</div>
+<br>
+<div>We'd love to get your reports of use and suggestions for enhancement. To report issues please visit <a href="https://github.com/EOCOnline/OpenFemaNgClient/issues/" target="_blank">https://github.com/EOCOnline/OpenFemaNgClient/issues/</a></div>
+</footer>
+<div class="copyLeft">©2022 eoc.online, under the MIT License</div>
+<br>
