--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,15 +12,7 @@
       title="See ya at GitHub for issue reports & source code" class="git">
       <img src="../assets/icons/GitHub-Mark-32px.png" id="gitLogo" /></a>
   </span>
-
-
 </nav>
 
 <router-outlet></router-outlet>
-
-app-dataset-viewer NEXT
-<!-- app-dataset-viewer -- > app-dataset-viewer goes here!<! -- /app-dataset-viewer -- >
-app-dataset-viewer ABOVE -->
-<hr>
-app-footer here...
-<!-- app-footer></app-footer -->
+<app-footer></app-footer>
