--- a/src/app/Components/footer/footer.component.scss
+++ b/src/app/Components/footer/footer.component.scss
@@ -1,11 +1,16 @@
+.footer {
+  //text-decoration:none;
+  font-size:medium;
+  font-weight: bold;
+  margin-left: 2vw;
+  margin-right: 2vw;
+  font-family: "Baloo 2",Roboto,"Open Sans",Helvetica, sans-serif;
+}
+
 .copyLeft {
-  text-decoration:none;
-  font-size: small;
+  //text-decoration:none;
+  //font-size:;
   float:right;
   margin-right: 2vw;
   font-family: "Faster One","Open Sans",Helvetica, sans-serif;
-}
-
-div {
-  margin-left: 1vw;
 }
