--- a/src/app/Components/dataset-viewer/dataset-viewer.component.html
+++ b/src/app/Components/dataset-viewer/dataset-viewer.component.html
@@ -3,8 +3,9 @@
 <h3>Disaster Declarations Summary</h3>
 
 <ul>
-  <li *ngFor="let disaster of disasterDeclarationsSummaries| paginate: { itemsPerPage: 10, currentPage: page }; index as i ">
-    {{i}}) {{disaster.femaDeclarationString}}: &nbsp;&nbsp;&nbsp;&nbsp; #{{disaster.disasterNumber}}; &nbsp;&nbsp;&nbsp;&nbsp; ST: {{disaster.state}}; &nbsp;&nbsp;&nbsp;&nbsp; Type: {{disaster.declarationType}}; &nbsp;&nbsp;&nbsp;&nbsp; Date: {{disaster.declarationDate | date:'mediumDate'}};
+  <li *ngFor="let disaster of disasterDeclarationsSummaries| paginate: { itemsPerPage: 10, currentPage: page }">
+    ; index as i
+    i) {{disaster.femaDeclarationString}}: &nbsp;&nbsp;&nbsp;&nbsp; #{{disaster.disasterNumber}}; &nbsp;&nbsp;&nbsp;&nbsp; ST: {{disaster.state}}; &nbsp;&nbsp;&nbsp;&nbsp; Type: {{disaster.declarationType}}; &nbsp;&nbsp;&nbsp;&nbsp; Date: {{disaster.declarationDate | date:'mediumDate'}};
     <br>
     <!-- app-dataset-card [disaster]=disaster [index]=i></app-dataset-card -->
   </li>
