--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -1,4 +1,13 @@
 <!-- https://nikitahl.com/horizontal-rule-css -->
+
+<div class="list">
+  <ul>
+    <li *ngFor="let item of collection | paginate: { itemsPerPage: 10, currentPage: p }">{{ item }}</li>
+  </ul>
+
+  <pagination-controls (pageChange)="p = $event"></pagination-controls>
+</div>
+
 <footer class="footer">
 <hr>
 <div>openFemaNgClient ֍ Version {{version}}</div>
