move from standalone component

--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -1,12 +1,12 @@
 <!-- https://nikitahl.com/horizontal-rule-css -->
 
-<div class="list">
+<!-- div class="list">
   <ul>
-    <li *ngFor="let item of collection | paginate: { itemsPerPage: 10, currentPage: p }">{{ item }}</li>
+    <li *ngFor="let item of collection | paginate: { itemsPerPage: 10, currentPage: page }">{{ item }}</li>
   </ul>
 
-  <pagination-controls (pageChange)="p = $event"></pagination-controls>
-</div>
+  <pagination-controls (pageChange)="page = $event"></pagination-controls>
+</div -->
 
 <footer class="footer">
 <hr>
