Display Dataset not looping...

--- a/src/app/Components/dataset-viewer/dataset-viewer.component.html
+++ b/src/app/Components/dataset-viewer/dataset-viewer.component.html
@@ -1,14 +1,19 @@
-<h1>Data Set Viewer</h1>
+<h1>Data Set Viewer -- Disaster Declarations Summary</h1>
+<article>
+  <ng-container *ngIf = "disasterDeclarationsSummaries; else ItsNull">
+    <ul>
+      <li *ngFor="let disaster of disasterDeclarationsSummaries | paginate: {itemsPerPage: 10, currentPage: page}; index as i">
+        {{i}}) {{disaster.femaDeclarationString}}: &nbsp;&nbsp;&nbsp;&nbsp; #{{disaster.disasterNumber}}; &nbsp;&nbsp;&nbsp;&nbsp; ST: {{disaster.state}}; &nbsp;&nbsp;&nbsp;&nbsp; Type: {{disaster.declarationType}}; &nbsp;&nbsp;&nbsp;&nbsp; Date: {{disaster.declarationDate | date:'mediumDate'}};
+        <br>
+        lets put out!
+        <app-dataset-card [disaster]=disaster [index]=i>app-dataset-card for {{i}}</app-dataset-card>
+      </li>
+    </ul>
+</ng-container>
 
-<h3>Disaster Declarations Summary</h3>
-<ul>
-  <li *ngFor="let disaster of disasterDeclarationsSummaries | paginate: {itemsPerPage: 10, currentPage: page} ; index as i">
-     {{i}}) {{disaster.femaDeclarationString}}: &nbsp;&nbsp;&nbsp;&nbsp; #{{disaster.disasterNumber}}; &nbsp;&nbsp;&nbsp;&nbsp; ST: {{disaster.state}}; &nbsp;&nbsp;&nbsp;&nbsp; Type: {{disaster.declarationType}}; &nbsp;&nbsp;&nbsp;&nbsp; Date: {{disaster.declarationDate | date:'mediumDate'}};
-    <br>
-    <app-dataset-card [disaster]=disaster [index]=i></app-dataset-card>
-  </li>
-</ul>
-
-<div class="has-text-centered">
+<ng-template #ItsNull>Woops: disasterDeclarationsSummaries is null!</ng-template>
+</article>
+<br>
+<div class="text-center">
   <pagination-controls (pageChange)="page = $event"></pagination-controls>
 </div>
