Try adding super simple list components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
     <h1 class="title">{{title}}</h1>
   </div>
   <a href="/list">List View</a>
+  <a href="/simple">Simple View</a>
   <a href="/grid">Grid View</a>
 
   <span class="rightAlign">
