--- a/src/app/Components/dataset-grid/dataset-grid.component.html
+++ b/src/app/Components/dataset-grid/dataset-grid.component.html
@@ -1,4 +1,5 @@
-<p>dataset-grid works!</p>
+
+<h1>Dataset Grid View</h1>
 
 <div id="reportsgrid">
   <ag-grid-angular #reportsGrid rowAnimation style="width: 100%; height: 60vh;" (gridReady)="onGridReady($event)"
@@ -16,3 +17,5 @@
         [showToolPanel]="showToolPanel"
       -->
   </ag-grid-angular>
+</div>
+<app-footer>WHY IS THIS OVERWRITTEN - also in app.component.html</app-footer>
