--- a/src/app/Components/simple-viewer/simple-viewer.component.html
+++ b/src/app/Components/simple-viewer/simple-viewer.component.html
@@ -8,7 +8,7 @@
       &nbsp;&nbsp;&nbsp;&nbsp; Date: {{disaster.declarationDate | date:'mediumDate'}};
       -->
       <br>
-      <simple-card [disaster]=disaster [index]=i>app-dataset-card for {{i}}</simple-card>
+      <simple-card [disaster]=disaster [index]=i></simple-card>
     </li>
   </ul>
 
