--- a/src/app/Components/dataset-viewer/dataset-viewer.component.html
+++ b/src/app/Components/dataset-viewer/dataset-viewer.component.html
@@ -1,20 +1,23 @@
 <h1>Data Set Viewer -- Disaster Declarations Summary</h1>
 <article>
   <ng-container *ngIf="disasterDeclarationsSummaries; else ItsNull">
-    <br>
+
     LENGTH = {{disasterDeclarationsSummaries.length}}
-    <ul>
+    <!-- ul>
       <li
-        *ngFor="let disaster of disasterDeclarationsSummaries | paginate: {itemsPerPage: 10, currentPage: page}; index as i">
-        <!--
+    -->
+    <span
+      *ngFor="let disaster of disasterDeclarationsSummaries | paginate: {itemsPerPage: 5, currentPage: page}; index as i">
+      <!--
         {{i}}) {{disaster.femaDeclarationString}}: &nbsp;&nbsp;&nbsp;&nbsp; #{{disaster.disasterNumber}};
         &nbsp;&nbsp;&nbsp;&nbsp; ST: {{disaster.state}}; &nbsp;&nbsp;&nbsp;&nbsp; Type: {{disaster.declarationType}};
         &nbsp;&nbsp;&nbsp;&nbsp; Date: {{disaster.declarationDate | date:'mediumDate'}};
         <br>
         -->
-        <app-dataset-card [disaster]=disaster [index]=i></app-dataset-card>
-      </li>
-    </ul>
+      <app-dataset-card [disaster]=disaster [index]=i></app-dataset-card>
+    </span>
+    <!-- /li>
+    </ul -->
   </ng-container>
 
   <ng-template #ItsNull>Whoops: disasterDeclarationsSummaries is null!</ng-template>
