--- a/src/app/Components/dataset-viewer/dataset-viewer.component.scss
+++ b/src/app/Components/dataset-viewer/dataset-viewer.component.scss
@@ -1,19 +1,21 @@
 h1 {
-    //text-decoration:none;
-    font-size: large;
-    font-weight: bold;
-    // float:right;
-    margin-left: 2vw;
-    font-family: "Baloo 2","Open Sans",Helvetica, sans-serif;
-  }
+  //text-decoration:none;
+  display       : flex;
+  flex-direction: row;
+  font-size     : large;
+  font-weight   : bold;
+  // float:right;
+  margin-left   : 2vw;
+  font-family   : "Baloo 2", "Open Sans", Helvetica, sans-serif;
+}
 
-  article {
-    margin-left: 2vw;
-    font-size: small;
+article {
+  margin-left: 2vw;
+  font-size  : small;
 
-  }
+}
 
 .text-center {
-  text-align: center;
+  text-align   : center;
   //margin-left: 2vw;
 }
