--- a/src/app/Components/dataset-viewer/dataset-viewer.component.html
+++ b/src/app/Components/dataset-viewer/dataset-viewer.component.html
@@ -2,12 +2,12 @@
 <article>
   <ng-container *ngIf="disasterDeclarationsSummaries; else ItsNull">
 
-    LENGTH = {{disasterDeclarationsSummaries.length}}
+    <!-- LENGTH = {{disasterDeclarationsSummaries.length}} -->
     <!-- ul>
       <li
     -->
     <span
-      *ngFor="let disaster of disasterDeclarationsSummaries | paginate: {itemsPerPage: 5, currentPage: page}; index as i">
+      *ngFor="let disaster of disasterDeclarationsSummaries | paginate: {itemsPerPage: 15, currentPage: page}; index as i">
       <!--
         {{i}}) {{disaster.femaDeclarationString}}: &nbsp;&nbsp;&nbsp;&nbsp; #{{disaster.disasterNumber}};
         &nbsp;&nbsp;&nbsp;&nbsp; ST: {{disaster.state}}; &nbsp;&nbsp;&nbsp;&nbsp; Type: {{disaster.declarationType}};
