--- a/src/app/Components/dataset-viewer/dataset-viewer.component.scss
+++ b/src/app/Components/dataset-viewer/dataset-viewer.component.scss
@@ -1,18 +1,17 @@
 h1 {
   //text-decoration:none;
-  display       : flex;
-  flex-direction: row;
-  font-size     : large;
-  font-weight   : bold;
-  // float:right;
-  margin-left   : 2vw;
-  font-family   : "Baloo 2", "Open Sans", Helvetica, sans-serif;
+  font-size  : large;
+  font-weight: bold;
+  margin-left: 2vw;
+  font-family: "Baloo 2", "Open Sans", Helvetica, sans-serif;
 }
 
 article {
-  margin-left: 2vw;
-  font-size  : small;
-
+  margin-left   : 10px;
+  font-size     : small;
+  display       : flex;
+  flex-direction: row;
+  flex-wrap     : wrap;
 }
 
 .text-center {
