Add pagination per page to dataset-viewer

--- a/src/app/Components/dataset-card/dataset-card.component.html
+++ b/src/app/Components/dataset-card/dataset-card.component.html
@@ -1,5 +1,5 @@
 <article class="dataset-card">
-
+  {{index}}
   <h3 class="dataset-head">{{disaster.femaDeclarationString}}: &nbsp;&nbsp; {{disaster.declarationTitle}}</h3>
   <!-- div class="dataset-subhead"></div -->
 
