--- a/src/app/Components/dataset-viewer/dataset-viewer.component.scss
+++ b/src/app/Components/dataset-viewer/dataset-viewer.component.scss
@@ -18,3 +18,9 @@ article {
   text-align   : center;
   //margin-left: 2vw;
 }
+
+#idNumPerPage {
+  width              : 3rem;
+  // background-color: rgb(248, 254, 237);
+  box-shadow         : rgba(0, 0, 0, 0.16) 0px 5px 6px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+}
