--- a/src/app/Components/simple-viewer/simple-viewer.component.html
+++ b/src/app/Components/simple-viewer/simple-viewer.component.html
@@ -13,7 +13,7 @@
 
 <br>
 <div class="text-center">
-  <label>Number/Page: </label><input #NumPerPage id="idNumPerPage2" size="30" type="number" [value]="itemsPerPage"
+  <label>Number/Page: </label><input #NumPerPage id="idNumPerPage" size="30" type="number" [value]="config.itemsPerPage"
     (change)="onNumberPerPage()" (blur)="onNumberPerPage()">
   <pagination-controls (pageChange)="config.currentPage = $event" [maxSize]="10"></pagination-controls>
 </div>
