--- a/src/app/Components/dataset-viewer/dataset-viewer.component.html
+++ b/src/app/Components/dataset-viewer/dataset-viewer.component.html
@@ -6,8 +6,7 @@
     <!-- ul>
       <li
     -->
-    <span
-      *ngFor="let disaster of disasterDeclarationsSummaries | paginate: {itemsPerPage: 15, currentPage: page}; index as i">
+    <span *ngFor="let disaster of disasterDeclarationsSummaries | paginate: config; index as i">
       <!--
         {{i}}) {{disaster.femaDeclarationString}}: &nbsp;&nbsp;&nbsp;&nbsp; #{{disaster.disasterNumber}};
         &nbsp;&nbsp;&nbsp;&nbsp; ST: {{disaster.state}}; &nbsp;&nbsp;&nbsp;&nbsp; Type: {{disaster.declarationType}};
@@ -24,5 +23,7 @@
 </article>
 <br>
 <div class="text-center">
-  <pagination-controls (pageChange)="page = $event"></pagination-controls>
+  <label>Number/Page: </label><input #NumPerPage id="idNumPerPage" size="30" type="number" [value]="config.itemsPerPage"
+    (change)="onNumberPerPage()" (blur)="onNumberPerPage()">
+  <pagination-controls (pageChange)="config.currentPage = $event" [maxSize]="10"></pagination-controls>
 </div>
