pre simple to card name change

--- a/src/app/Components/simple-card/simple-card.component.html
+++ b/src/app/Components/simple-card/simple-card.component.html
@@ -10,7 +10,7 @@
     {{disaster.incidentEndDate | date: 'shortDate'}}; closed {{disaster.disasterCloseoutDate | date:
     'shortDate'}}</span>
 
-  <div class="dataset-description">FIPS: {{disaster.fipsCountyCode}} & {{disaster.fipsStateCode}}; Reqest
+  <div class="dataset-description">FIPS: {{disaster.fipsCountyCode}} & {{disaster.fipsStateCode}}; Request
     # {{disaster.declarationRequestNumber}}</div>
 
   <div class="dataset-details"><a href="/details/{{index}}">See all detail fields</a></div>
