--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -18,15 +18,15 @@
     </span  -->
 
   <a href="/list">List View</a>
-  <a href="/simple">Simple View</a>
+  <a href="/card">Card View</a>
   <a href="/grid">Grid View</a>
   <nav>
     <!-- ul>
     <li>
       <a [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Home</a>
     </li>
-    <li><a [routerLink]="['/list']" routerLinkActive="active">List or Card</a></li>
-    <li><a [routerLink]="['/simple']" routerLinkActive="active">Simple</a></li>
+    <li><a [routerLink]="['/list']" routerLinkActive="active">List</a></li>
+    <li><a [routerLink]="['/simple']" routerLinkActive="active">Card</a></li>
     <li><a [routerLink]="['/grid']" routerLinkActive="active">Grid</a></li>
 
     <li *ngIf="isNavigating" class="Navbar__progressBar">Loading... <span class="smaller"> (Please 'Refresh' the
