--- a/src/app/Components/navbar/navbar.component.scss
+++ b/src/app/Components/navbar/navbar.component.scss
@@ -13,7 +13,7 @@
 .main-nav {
   display            : flex;
   height             : 4vh;
-  background         : rgb(183, 244, 255);
+  background         : #FFD54F;
   // color         : white;
   //border-radius    : 3px;
   padding-top        : 0.3em;
