--- a/src/app/Components/dataset-card/dataset-card.component.html
+++ b/src/app/Components/dataset-card/dataset-card.component.html
@@ -1,14 +1,15 @@
 <article class="dataset-card">
-  <span [ngStyle]="{'background-color':
+  <span class="item" [ngStyle]="{'background-color':
+    (disaster.incidentType == 'Coastal Storm') ? '#80DEEA':
+    (disaster.incidentType == 'Earthquake') ? '#FFFF00':
     (disaster.incidentType == 'Fire') ? '#FF6E40':
-    (disaster.incidentType == 'Flood') ? '##8C9EFF':
-    (disaster.incidentType == 'Severe Storm') ? 'lightblue':
-    (disaster.incidentType == 'Hurricane') ? '#E040FB':
-    (disaster.incidentType == 'Tornade') ? '#E1BEE7':
-    (disaster.incidentType == 'Costal Storm') ? '#80DEEA':
-    (disaster.incidentType == 'Snowstorm') ? '#E0E0E0':
+    (disaster.incidentType == 'Flood') ? '#8C9EFF':
+    (disaster.incidentType == 'Hurricane') ? '#CE93D8':
     (disaster.incidentType == 'Severe Ice Storm') ? '#B2EBF2':
-    (disaster.incidentType == 'Other') ? '#757575':
+    (disaster.incidentType == 'Severe Storm') ? 'lightblue':
+    (disaster.incidentType == 'Snowstorm') ? '#E0E0E0':
+    (disaster.incidentType == 'Tornado') ? '#E1BEE7':
+    (disaster.incidentType == 'Other') ? '#EEEEEE':
     null}">
     {{index}} - {{disaster.incidentType}}</span>
   <h3 class="dataset-head">{{disaster.femaDeclarationString}}: &nbsp;&nbsp; {{disaster.declarationTitle}}</h3>
