--- a/src/app/Components/navbar/navbar.component.scss
+++ b/src/app/Components/navbar/navbar.component.scss
@@ -11,16 +11,19 @@
 }
 
 .main-nav {
-  display            : flex;
-  height             : 4vh;
-  background         : #FFD54F;
+  display              : flex;
+  height               : 4vh;
+  //background         : #FFD54F;
+  // https://cssgradient.io/
+  background           : rgb(179, 119, 0);
+  background           : linear-gradient(54deg, rgba(179, 119, 0, 0.8748543362657564) 0%, rgba(173, 150, 33, 1) 69%, rgba(255, 226, 0, 1) 100%);
+
   // color         : white;
   //border-radius    : 3px;
-  padding-top        : 0.3em;
-  padding-bottom     : 0.5em;
-  //font-family   : 'Arima Madurai', sans-serif;
-  font-size          : 1.2em;
-
+  padding-top   : 0.3em;
+  padding-bottom: 0.5em;
+  font-family   : Sniglet, 'Arima Madurai', sans-serif;
+  font-size     : 1.5em;
 }
 
 .main-nav>ul {
@@ -45,9 +48,11 @@
 }
 
 .title {
-  width         : 30vw;
+  width         : 35vw;
   margin-right  : 2em;
   vertical-align: top;
+  font-family   : Sniglet, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size     : 1.3em;
 }
 
 .Navbar__progressBar {
