Disaster Types is better; checkboxes display

--- a/src/app/Components/card-viewer/card-viewer.component.html
+++ b/src/app/Components/card-viewer/card-viewer.component.html
@@ -17,3 +17,10 @@
     (change)="onNumberPerPage()" (blur)="onNumberPerPage()">
   <pagination-controls (pageChange)="config.currentPage = $event" [maxSize]="10"></pagination-controls>
 </div>
+
+<div class="checks">
+  <span *ngFor="let type of types">
+    <input type="checkbox" class="type" checked="true">
+    <label> {{type.type}}</label><br>
+  </span>
+</div>
